--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,41 @@
   font-family: sans-serif;
 }
 
-.center {
-  margin: auto;
+.crop {
+  overflow: hidden;
+}
+
+.crop img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  /* Center the image within the element */
+  width: 100%;
+  max-height: 250px;
+}
+
+.blue-box {
+  background-color: #003767;
+}
+
+.blue-box p {
+  color: white;
+}
+
+h1 {
+  text-align: center;
+}
+
+.scroll {
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.scroll .scroll-card {
+  display: inline-block;
+  float: none;
 }
 /*# sourceMappingURL=main.css.map */
