--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,51 @@
+$oit_blue: #003767;
+$oit_gold: #ffd14e;
+
 *
 {
     font-family: sans-serif;
     
 }
 
-.center
+.crop 
 {
-    margin: auto;
+    overflow: hidden;
+    img {
+
+        object-fit: cover;
+        object-position: center; /* Center the image within the element */
+        width: 100%;  
+        max-height: 250px;
+    }
+}
+
+.blue-box
+{
+    background-color: $oit_blue;
+    p
+    {
+        color: white;
+    }
+}
+
+h1
+{
+    text-align: center;
+}
+
+.scroll
+{
+    width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+    
+
+    // [class^="col-"] // All classes starting with "col-"
+    .scroll-card
+    {
+        display: inline-block;
+        float: none;
+    }
 }
