--- a/css/main.scss
+++ b/css/main.scss
@@ -4,17 +4,23 @@ $oit_gold: #ffd14e;
 *
 {
     font-family: sans-serif;
-    
+}
+#building-crop-1 img
+{
+    margin: -100px   -1 0 10 !important;
 }
 
 .crop 
 {
     overflow: hidden;
+
+    padding: 0px 5px 10px  !important;
+    
     img {
 
         object-fit: cover;
         object-position: center; /* Center the image within the element */
-        width: 100%;  
+        width: 100%;
         max-height: 250px;
     }
 }
@@ -22,7 +28,9 @@ $oit_gold: #ffd14e;
 .blue-box
 {
     background-color: $oit_blue;
-    p
+    padding: 10px;
+
+    *
     {
         color: white;
     }
@@ -40,12 +48,10 @@ h1
     overflow-y: hidden;
     white-space: nowrap;
 
-    
-
-    // [class^="col-"] // All classes starting with "col-"
     .scroll-card
     {
         display: inline-block;
         float: none;
+        text-align: center;
     }
 }
