--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,9 @@ $oit_gold: #ffd14e;
 {
     font-family: sans-serif;
 }
+
+
+// TODO: Move to correct file
 #building-crop-1 img
 {
     margin: -100px   -1 0 10 !important;
@@ -36,7 +39,7 @@ $oit_gold: #ffd14e;
     }
 }
 
-h1
+h1.title
 {
     text-align: center;
 }
