Moving some stuff around, some new links that go nowhere

--- a/css/campus_map.scss
+++ b/css/campus_map.scss
@@ -2,14 +2,16 @@
     position: relative;
     overflow: auto;
 
-    a{
+    a
+    {
         display: block;      
         position: absolute;
-        // border: 1px solid magenta;
+        border: 1px solid magenta;
     }
 
-    img{
-        max-height: 100%;
+    img
+    {
+        // max-height: 100%;
         max-width: 100%;
     }
 }
