--- a/css/campus_map.css
+++ b/css/campus_map.css
@@ -6,10 +6,10 @@
 #campus_map a {
   display: block;
   position: absolute;
+  border: 1px solid magenta;
 }
 
 #campus_map img {
-  max-height: 100%;
   max-width: 100%;
 }
 /*# sourceMappingURL=campus_map.css.map */
