Added banner and fixed map
Still trying to fix the banner to be one line that scales. The map is now centered and the clickable areas have been corrected.

--- a/css/campus_map.css
+++ b/css/campus_map.css
@@ -9,6 +9,20 @@
   border: 1px solid magenta;
 }
 
+.oit_logo img {
+  width: 70%;
+  padding-right: 5%;
+}
+.hootie_logo img {
+  width: 20%;
+}
+
+.center{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+}
 #campus_map img {
   max-width: 100%;
 }
