--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,22 @@ $oit_gold: #ffd14e;
     margin: -100px   -1 0 10 !important;
 }
 
+.navbar-brand img 
+{
+  width: 50%;
+}
+.hootie_logo img 
+{
+  width: 20%;
+}
+
+.center
+{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .crop 
 {
     overflow: hidden;
