Starting majors page (major/set.html)

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ $oit_gold: #ffd14e;
 // TODO: Move to correct file
 #building-crop-1 img
 {
-    margin: -100px   -1 0 10 !important;
+    margin: -100px -1 0 10 !important;
 }
 
 .navbar-brand img 
@@ -26,6 +26,7 @@ $oit_gold: #ffd14e;
   display: block;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
 }
 
 .crop 
