--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 }
 
 #building-crop-1 img {
-  margin: -100px   -1 0 10 !important;
+  margin: -100px -1 0 10 !important;
 }
 
 .navbar-brand img {
@@ -18,6 +18,7 @@
   display: block;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
 }
 
 .crop {
