--- a/css/campus_map.scss
+++ b/css/campus_map.scss
@@ -6,7 +6,7 @@
     {
         display: block;      
         position: absolute;
-        border: 1px solid magenta;
+        // border: 1px solid magenta;
     }
 
     img
