--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,14 @@
+// Variable delcarations
 $oit_blue: #003767;
 $oit_gold: #ffd14e;
+
+// When calling 'headings', makes all headings receive the content
+@mixin headings {
+    h1, h2, h3,
+    h4, h5, h6 {
+        @content;
+    }
+}
 
 *
 {
@@ -54,6 +63,17 @@ $oit_gold: #ffd14e;
     {
         color: white;
     }
+
+    p
+    {
+        margin: 0 15px 5px;
+    }
+
+    // See @mixins above
+    @include headings 
+    {
+        margin: 5px;
+    }
 }
 
 h1.title
@@ -63,6 +83,7 @@ h1.title
 
 .scroll
 {
+    margin-top: 10px;
     width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -73,5 +94,16 @@ h1.title
         display: inline-block;
         float: none;
         text-align: center;
+        
+        [id^=card-img] // identifiers that start with 'card-img'
+        {
+            width: 300px;
+            height: 300px;
+
+            background-size: cover; // Fill entire space
+            background-position: 50% 50%; // Center on div
+            background-repeat: no-repeat; // Don't repeat background
+        }
     }
+    
 }
