--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,21 @@
   color: white;
 }
 
+.blue-box p {
+  margin: 0 15px 5px;
+}
+
+.blue-box h1, .blue-box h2, .blue-box h3,
+.blue-box h4, .blue-box h5, .blue-box h6 {
+  margin: 5px;
+}
+
 h1.title {
   text-align: center;
 }
 
 .scroll {
+  margin-top: 10px;
   width: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -60,5 +70,13 @@ h1.title {
   display: inline-block;
   float: none;
   text-align: center;
+}
+
+.scroll .scroll-card [id^=card-img] {
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 /*# sourceMappingURL=main.css.map */
