--- a/css/campus_map.scss
+++ b/css/campus_map.scss
@@ -7,7 +7,7 @@
     {
         display: block;      
         position: absolute;
-        // border: 1px solid magenta; // Uncomment to show bounding boxes of border
+        // border: 1px solid magenta; // Uncomment to show bounding boxes of links
     }
 
     img
