--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,14 @@
 * {
-  font-family: sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+h1, h2, h3,
+h4, h5, h6 {
+  font-family: "Archivo Narrow", sans-serif;
 }
 
 #building-crop-1 img {
@@ -31,7 +40,6 @@
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
-  /* Center the image within the element */
   width: 100%;
   max-height: 250px;
 }
@@ -54,29 +62,60 @@
   margin: 5px;
 }
 
-h1.title {
-  text-align: center;
-}
-
 .scroll {
-  margin-top: 10px;
   width: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
 }
 
-.scroll .scroll-card {
+.scroll margin {
+  top: 10px;
+  left: 10px;
+}
+
+.scroll-card {
   display: inline-block;
   float: none;
   text-align: center;
 }
 
-.scroll .scroll-card [id^=card-img] {
-  width: 300px;
-  height: 300px;
+.scroll-card [id^=card-img] {
+  width: 20vw;
+  height: 20vw;
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .scroll-card [id^=card-img] {
+    width: 57vw;
+    height: 57vw;
+  }
+}
+
+.scroll-card:hover .card-text {
+  height: 30%;
+}
+
+.scroll-card .card-text {
+  height: 20%;
+  -webkit-transition: height 0.1s;
+  transition: height 0.1s;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  color: white;
+  background-color: rgba(0, 55, 103, 0.9);
+}
+
+.scroll-card .card-text p {
+  font-size: large;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 /*# sourceMappingURL=main.css.map */
