--- a/css/main.scss
+++ b/css/main.scss
@@ -10,9 +10,18 @@ $oit_gold: #ffd14e;
     }
 }
 
+// Font family decisions copied from OIT website
 *
 {
-    font-family: sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
+
+    // Disallow selecting of text for a better user experience
+    user-select: none; 
+}
+
+@include headings
+{
+    font-family: "Archivo Narrow", sans-serif;
 }
 
 // TODO: Move to correct file
@@ -48,7 +57,7 @@ $oit_gold: #ffd14e;
     {
 
         object-fit: cover;
-        object-position: center; /* Center the image within the element */
+        object-position: center; // Center the image within the element
         width: 100%;
         max-height: 250px;
     }
@@ -76,34 +85,72 @@ $oit_gold: #ffd14e;
     }
 }
 
-h1.title
-{
-    text-align: center;
-}
-
 .scroll
 {
-    margin-top: 10px;
+    margin // Shorthand for margin-top, margin-left, etc.
+    {
+        top: 10px;
+        left: 10px;
+    }
+
     width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
 
-    .scroll-card
+    &-card // Shorthand for .scroll-card. Does not become child of parent element.
     {
         display: inline-block;
         float: none;
         text-align: center;
+
+        
         
         [id^=card-img] // identifiers that start with 'card-img'
         {
-            width: 300px;
-            height: 300px;
-
+            // Sizing for phone displays, shows concepts better for presentations
+            @media screen and (max-width: 768px) {
+                &
+                {
+                    width: 57vw;
+                    height: 57vw;
+                }
+            }
+            
+            // Sizing for non-phone displays. Gets overwritten when the other one is done.
+            width: 20vw;
+            height: 20vw;
+            // position: absolute;
             background-size: cover; // Fill entire space
             background-position: 50% 50%; // Center on div
             background-repeat: no-repeat; // Don't repeat background
+
+            position: relative;
+        }
+
+        &:hover .card-text
+        {
+            height: 30%;
+        }
+
+        .card-text
+        {
+            height: 20%;
+            transition: height 0.1s;
+            position: absolute;
+            width: 100%;
+            bottom: 0px;
+            color: white;
+
+            background-color: rgba($color: $oit_blue, $alpha: 0.9);
+
+            p
+            {
+                font-size: large;
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+            }
         }
     }
-    
 }
