--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,10 @@ h4, h5, h6 {
 
 .blue-box {
   background-color: #003767;
-  padding: 10px;
+}
+
+.blue-box.col-4 {
+  padding: 15px 5px !important;
 }
 
 .blue-box * {
@@ -54,12 +57,14 @@ h4, h5, h6 {
 }
 
 .blue-box p {
-  margin: 0 15px 5px;
+  margin: 0;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
 
 .blue-box h1, .blue-box h2, .blue-box h3,
 .blue-box h4, .blue-box h5, .blue-box h6 {
-  margin: 5px;
+  margin: 0px;
 }
 
 .scroll {
