Adding in images for the future
Hopefully purvine4 is fixed

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,11 @@ h4, h5, h6 {
   -o-object-position: center;
      object-position: center;
   width: 100%;
-  max-height: 250px;
+  height: 15vh;
+}
+
+.crop .cover {
+  height: 20vh;
 }
 
 .blue-box {
