--- a/css/main.scss
+++ b/css/main.scss
@@ -53,13 +53,19 @@ $oit_gold: #ffd14e;
 
     padding: 0px 5px 10px  !important;
     
+    
     img
     {
 
         object-fit: cover;
         object-position: center; // Center the image within the element
         width: 100%;
-        max-height: 250px;
+        height: 15vh;
+    }
+
+    .cover
+    {
+        height: 20vh;
     }
 }
 
