--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@ h4, h5, h6 {
   position: relative;
 }
 
+.major {
+  background-color: #003767;
+}
+
 @media screen and (max-width: 768px) {
   .oit-card [id^=card-img] {
     width: 50vw;
