Fixed CSS style guide problem
moved the css code and modified the top majors section of homepage.

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,11 @@ $oit_gold: #ffd14e;
     }
 }
 
+.major {
+    margin: 5px;
+    background-color: #003767;
+  }
+  
 // Font family decisions copied from OIT website
 *
 {
