--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.major {
+  margin: 5px;
+  background-color: #003767;
+}
+
 * {
   font-family: "Roboto", Arial, sans-serif;
   -webkit-user-select: none;
@@ -114,10 +119,6 @@ h4, h5, h6 {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   position: relative;
-}
-
-.major {
-  background-color: #003767;
 }
 
 @media screen and (max-width: 768px) {
