--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ h4, h5, h6 {
   text-align: center;
 }
 
+.crop {
+  overflow: hidden;
+}
+
 .cover {
   overflow: hidden;
   padding: 0px 2px 2px 0px;
@@ -61,7 +65,7 @@ h4, h5, h6 {
 }
 
 .blue-box {
-  padding: 15px 5px !important;
+  padding: 5px 5px !important;
   margin-bottom: 2px;
   background-color: #003767;
 }
