--- a/css/major.css
+++ b/css/major.css
@@ -13,8 +13,9 @@
 
 /* Hide the images by default */
 .slides {
+  overflow: hidden;
   display: none;
-  max-height: 40px;
+  max-height: 20vh;
 }
 
 /* Next & previous buttons */
@@ -22,8 +23,9 @@
   cursor: pointer;
   position: absolute;
   top: 50%;
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
   width: auto;
-  margin-top: -22px;
   padding: 16px;
   color: white;
   font-weight: bold;
@@ -35,53 +37,12 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  text-decoration: none;
 }
 
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  -webkit-transition: background-color 0.6s ease;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
 }
 
 /* Fading animation */
