--- a/css/major.scss
+++ b/css/major.scss
@@ -1,10 +1,12 @@
 // Mostly taken from https://www.w3schools.com/howto/howto_js_slideshow.asp
+
 .carousel
 {
     position: relative;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
     *
     {
         box-sizing:border-box;
@@ -14,19 +16,21 @@
 /* Hide the images by default */
 .slides 
 {
+    overflow: hidden;
     display: none;
-    max-height: 40px;
-    
+    max-height: 20vh;
 }
 
-    /* Next & previous buttons */
+/* Next & previous buttons */
 .prev, .next 
 {
     cursor: pointer;
     position: absolute;
+
     top: 50%;
+    transform: translate(0%, -50%);
+
     width: auto;
-    margin-top: -22px;
     padding: 16px;
     color: white;
     font-weight: bold;
@@ -34,6 +38,7 @@
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    text-decoration: none;
 }
 
 .next 
@@ -42,53 +47,7 @@
     border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover 
-{
-    background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text
-{
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext 
-{
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot
-{
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover 
-{
-    background-color: #717171;
-}
-
-    /* Fading animation */
+/* Fading animation */
 .fade 
 {
     animation-name: fade;
