--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/building.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/building.css">
 
     <meta name="mobile-web-app-capable" content="yes">
     <title>Purvine Hall</title>
@@ -18,13 +18,13 @@
     <table class="container-fluid">
         <tr class="row m-auto">
             <td class="col-12 cover main" id="building-crop-1">
-                <img src="../images/purvine1.jpg">
+                <img src="images/purvine1.jpg">
             </td>
         </tr>
         <tr class="row m-auto">
-            <td class="col-4 cover"><img src="../images/purvine2.jpg"></td>
-            <td class="col-4 cover"><img src="../images/purvine3.jpg"></td>
-            <td class="col-4 cover"><img src="../images/purvine4.jpg"></td>
+            <td class="col-4 cover"><img src="images/purvine2.jpg"></td>
+            <td class="col-4 cover"><img src="images/purvine3.jpg"></td>
+            <td class="col-4 cover"><img src="images/purvine4.jpg"></td>
         </tr>
         <tr class="row m-auto">
             <td class="col-4 blue-box">
@@ -46,7 +46,7 @@
             </td>
         </tr>
 
-    <!-- Images for this file are stored in ../css/building.scss -->
+    <!-- Images for this file are stored in css/building.scss -->
     <tr class="row m-0">
         <td class="col-3 p-1">
             <div class="oit-card" id="card-img-1">
@@ -82,7 +82,6 @@
     </tr>
     </table>
 
-    <script src="../build/bootstrap.bundle.js"></script>
+    <script src="build/bootstrap.bundle.js"></script>
 </body>
-
 </html>
