--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 
     <meta name="mobile-web-app-capable" content="yes">
@@ -17,17 +17,18 @@
     <h1 class="title">Link Page</h1>
     <div>
         <p>
-            <a href="home_page.html">Home Page</a>
+            <a href="home_page">Home Page</a>
         </p>
         <p>
-            <a href="buildings/purvine.html">Purvine Hall</a>
+            <a href="building?page=purvine">Purvine Hall</a>
         </p>
         <p>
-            <a href="building_select.html">Building Selector</a>
+            <a href="building_select">Building Selector</a>
         </p>
-        <p><a href="major/set.html">Software Engineering Technology</a></p>
-        <p><a href="major_select.html">Major Select</a></p>
-        <p><a href="aaaaaaaaaaaaaaaaaa.html">404</a></p>
+        <p><a href="major?page=set">Software Engineering Technology</a></p>
+        <p><a href="major_select">Major Select</a></p>
+        <p><a href="aaaaaaaaaaaaaaaaaa">404</a></p>
+        <p><a href="ejs_test">ejs test</a></p>
     </div>
 
 <script src="build/bootstrap.bundle.js"></script>
