--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/major.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/major.css">
 
     <meta name="mobile-web-app-capable" content="yes">
 
@@ -20,15 +20,15 @@
         <tr class="row m-auto">
             <td class="col-12 carousel">
                 <div class="slides">
-                    <img src="../images/cset1.jpg" style="width:100%">
+                    <img src="images/cset1.jpg" style="width:100%">
                 </div>
                 
                 <div class="slides">
-                    <img src="../images/cset2.jpg" style="width:100%">
+                    <img src="images/cset2.jpg" style="width:100%">
                 </div>
                 
                 <div class="slides">
-                    <img src="../images/cset3.jpg" style="width:100%">
+                    <img src="images/cset3.jpg" style="width:100%">
                 </div>
                 
                 <!-- Next and previous buttons -->
@@ -63,8 +63,8 @@
         </tr>
     </table>
 
-<script src="../build/bootstrap.bundle.js"></script>
+<script src="build/bootstrap.bundle.js"></script>
 
-<script src="../js/major.js"></script>
+<script src="js/major.js"></script>
 </body>
 </html>
