ejs seems to work!

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,7 +25,8 @@
         <p>
             <a href="building_select">Building Selector</a>
         </p>
-        <p><a href="major?page=set">Software Engineering Technology</a></p>
+        <p><a href="major?page=Software Engineering Technology">Software Engineering Technology</a></p>
+        <p><a href="major?page=Accounting">Accounting</a></p>
         <p><a href="major_select">Major Select</a></p>
         <p><a href="aaaaaaaaaaaaaaaaaa">404</a></p>
         <p><a href="ejs_test">ejs test</a></p>
