--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -30,10 +30,9 @@
         <p><a href="major?page=Accounting">Accounting</a></p>
         <hr/>
         <p><a href="major_select">Major Select</a></p>
-        <p><a href="aaaaaaaaaaaaaaaaaa">404</a></p>
-        <p><a href="ejs_test">ejs test</a></p>
+        <p><a href="major?page=aaaaaaaaa">404 major test</a></p>
+        <p><a href="old_building_select">Old Building Select</a></p>
     </div>
-
 <script src="build/bootstrap.bundle.js"></script>
 </body>
 </html>
