Some light spellchecking and renaming

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -160,7 +160,7 @@ $oit_gold: #ffd14e;
         height: 30%;
     }
 
-    &-text // & can be used to concatinate on other text. Will become .oit-card-text
+    &-text // & can be used to concatenate on other text. Will become .oit-card-text
     {
         height: 20%;
         transition: height 0.1s;
