--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -12,7 +12,7 @@
     <p>
         Hey there! <br />
         That page doesn't exist. <br />
-        Please let us know if you see this page! <br /> <br />
+        Please let someone know if you see this page! <br /> <br />
         Info: Tried to access <span id="pathname">unknown page</span> <span id="query"></span>
     </p>
 
