--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -34,7 +34,7 @@
                 <h5>Primary Majors</h5>
                 <p>Software</p>
                 <p>Embedded</p>
-                <p>Electical</p>
+                <p>Electrical</p>
             </td>
             <td class="col-8">
                 <h1 class="title">Purvine Hall</h1>
