--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -17,35 +17,35 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="sp-3 collapser p-1" type="button" data-bs-toggle="collapse" data-bs-target=".collapse1" aria-expanded="false" aria-controls=".collapse1">
+            <div class="width-25 collapser p-1" type="button" data-bs-toggle="collapse" data-bs-target=".collapse1" aria-expanded="false" aria-controls=".collapse1">
                 <div class="oit-card">
                     <div class="oit-card-text">
                         <p>the1</p>
                     </div>
                 </div>
             </div>
-                <div class="sp-3 collapse1 p-1 collapse">
+                <div class="width-25 collapse1 p-1 collapse">
                     <div class="oit-card">
                         <div class="oit-card-text">
                             <p>the2</p>
                         </div>
                     </div>
                 </div>
-                <div class="sp-3 collapse1 p-1 collapse">
+                <div class="width-25 collapse1 p-1 collapse">
                     <div class="oit-card">
                         <div class="oit-card-text">
                             <p>the3</p>
                         </div>
                     </div>
                 </div>
-                <div class="sp-3 collapse1 p-1 collapse">
+                <div class="width-25 collapse1 p-1 collapse">
                     <div class="oit-card">
                         <div class="oit-card-text">
                             <p>the4</p>
                         </div>
                     </div>
                 </div>
-                <div class="sp-3 p-1">
+                <div class="width-25 p-1">
                     <div class="oit-card">
                         <div class="oit-card-text">
                             <p>the5</p>
