ejs is able to edit inline css

--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -17,41 +17,49 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="width-25 collapser p-1" type="button" data-bs-toggle="collapse" data-bs-target=".collapse1" aria-expanded="false" aria-controls=".collapse1">
-                <div class="oit-card">
+            <div class="width-25 collapser p-1" type="button" data-bs-toggle="collapse" data-bs-target=".collapse-group1"
+                aria-expanded="false" aria-controls=".collapse-group1">
+                <div class="oit-card" style="background-image: url('<%= 'images/frog1.jpg' %>')">
                     <div class="oit-card-text">
-                        <p>the1</p>
+                        <p>Category 1</p>
                     </div>
                 </div>
             </div>
-                <div class="width-25 collapse1 p-1 collapse">
-                    <div class="oit-card">
-                        <div class="oit-card-text">
-                            <p>the2</p>
-                        </div>
+            <div class="width-25 p-1 collapse-group1 collapse">
+                <div class="oit-card" style="background-image: url('<%= 'images/frog2.jpg' %>')">
+                    <div class="oit-card-text">
+                        <p>the2</p>
                     </div>
                 </div>
-                <div class="width-25 collapse1 p-1 collapse">
-                    <div class="oit-card">
-                        <div class="oit-card-text">
-                            <p>the3</p>
-                        </div>
+            </div>
+            <div class="width-25 p-1 collapse-group1 collapse">
+                <div class="oit-card" style="background-image: url('<%= 'images/frog3.jpg' %>')">
+                    <div class="oit-card-text">
+                        <p>the3</p>
                     </div>
                 </div>
-                <div class="width-25 collapse1 p-1 collapse">
-                    <div class="oit-card">
-                        <div class="oit-card-text">
-                            <p>the4</p>
-                        </div>
+            </div>
+            <div class="width-25 p-1 collapse-group1 collapse">
+                <div class="oit-card" style="background-image: url('<%= 'images/frog1.jpg' %>')">
+                    <div class="oit-card-text">
+                        <p>the4</p>
                     </div>
                 </div>
-                <div class="width-25 p-1">
-                    <div class="oit-card">
-                        <div class="oit-card-text">
-                            <p>the5</p>
-                        </div>
+            </div>
+            <div class="width-25 p-1 collapse-group1 collapse">
+                <div class="oit-card" style="background-image: url('<%= 'images/frog2.jpg' %>')">
+                    <div class="oit-card-text">
+                        <p>the5</p>
                     </div>
                 </div>
+            </div>
+            <div class="width-25 p-1">
+                <div class="oit-card" style="background-image: url('<%= 'images/frog3.jpg' %>')">
+                    <div class="oit-card-text">
+                        <p>the6</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
