--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,10 +36,9 @@ $oit_gold: #ffd14e;
     margin: -100px -1 0 10 !important;
 }
 
-.navbar-brand img 
-{
-  width: 50%;
-}
+// Moved to the nav.ejs
+
+
 .hootie_logo img 
 {
   width: 20%;
