--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -83,7 +83,8 @@
     </table>
     <%- include("nav", {current: "\"home_page\""}) %>
 
-    <script src="build/bootstrap.bundle.js"></script>
+    <!-- If there is a navbar there is no need to add the bootstrap bundle. -->
+    <!-- <script src="build/bootstrap.bundle.js"></script> -->
 </body>
 
 </html>
