--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -1,11 +1,5 @@
-<style>
-    .navbar::before
-    {
-        padding-top: 100%;
-    }
-</style>
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="index">
+    <a class="navbar-brand" href="/">
         <img src="https://www.oit.edu/themes/custom/oregontech/images/logo.png" alt="oit logo">
     </a>
 
@@ -33,12 +27,20 @@
 </nav>
 <script src="build/bootstrap.bundle.js"></script>
 <script>
+    // Adding in some css stuff because I'm unsure if there's a way to add css in what would
+    // be the bottom of the page
+    $("body").css("padding-bottom", "100px");
+
+    // VSCode may be angry but it is what's needed.
+    // It'll be correct once it's on the browser.
     var current = <%- current %>;
+
     var links = $(".nav-item");
-    for (let i = 0; i < links.length; i++) {
+    for (let i = 0; i < links.length; i++) 
+    {
         const link = links[i];
-        if ($($(link).children("a")[0]).attr("href") == current) {
-            console.log("Found!");
+        if ($($(link).children("a")[0]).attr("href") === current) 
+        {
             $(link).addClass("active")
             $($(link).children("a")[0]).addClass("active");
             $($(link).children("a")[0]).append(
