--- a/views/pages/old_building_select.ejs
+++ b/views/pages/old_building_select.ejs
@@ -60,6 +60,6 @@
 
     <script type="module" src="build/bootstrap.bundle.js"></script>
 
-    <script type="module" src="js/building_select.js"></script>
+    <!-- <script type="module" src="js/building_select.js"></script> -->
 </body>
 </html>
