Fix to the incorrectly removed thing

--- a/views/pages/nav.ejs
+++ b/views/pages/nav.ejs
@@ -30,6 +30,7 @@
     // Adding in some css stuff because I'm unsure if there's a way to add css in what would
     // be the bottom of the page
     $("body").css("padding-bottom", "100px");
+    $(".navbar-brand img ").css("width", "50%");
 
     // VSCode may be angry but it is what's needed.
     // It'll be correct once it's on the browser.
