Removed the href when it's on the same page

--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -81,7 +81,7 @@
             </td>
         </tr>
     </table>
-    <%- include("nav", {current: "\"home_page\""}) %>
+    <%- include("nav", {current: "'home_page'"}) %>
 
     <!-- If there is a navbar there is no need to add the bootstrap bundle. -->
     <!-- <script src="build/bootstrap.bundle.js"></script> -->
