--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -81,10 +81,10 @@
             </td>
         </tr>
     </table>
-    <%- include("nav", {current: "\"home_page\""}) %>
+    
 
     <!-- If there is a navbar there is no need to add the bootstrap bundle. -->
-    <!-- <script src="build/bootstrap.bundle.js"></script> -->
+    <script src="build/bootstrap.bundle.js"></script>
 </body>
 
 </html>
