Got the classes set up working on getting it hooked up with ejs

--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -21,7 +21,7 @@
                 aria-expanded="false" aria-controls=".collapse-group1">
                 <div class="oit-card" style="background-image: url('<%= 'images/frog1.jpg' %>')">
                     <div class="oit-card-text">
-                        <p>Category 1</p>
+                        <p>Context</p>
                     </div>
                 </div>
             </div>
