--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -34,7 +34,7 @@
                 { 
                     let degree = degreeRef.path.split("/")[1];
                     %>
-                    <div class="width-25 p-1 <%= categoryAsClass %> collapse">
+                    <div class="width-25 p-1 <%= categoryAsClass %> collapse in-group">
                         <a href="/major?page=<%- degree %>">
                             <div class="oit-card" style="background-image: url('<%= 'images/frog2.jpg' %>')">
                                 <div class="oit-card-text">
