--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -2,14 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include("head"); %>
 
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-
-    <meta name="mobile-web-app-capable" content="yes">
     <title>Index</title>
 </head>
 
