--- a/views/pages/major.ejs
+++ b/views/pages/major.ejs
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <%- include("head"); %>
     <link rel="stylesheet" href="css/major.css">
-
-    <meta name="mobile-web-app-capable" content="yes">
 
     <title><%= major.id %></title>
 </head>
