--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -2,15 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    
+    <%- include("head"); %>
+    
     <link rel="stylesheet" href="css/major_select.css">
 
-    <meta name="mobile-web-app-capable" content="yes">
     <title>Major Select</title>
 </head>
 
