--- a/views/pages/links.ejs
+++ b/views/pages/links.ejs
@@ -10,6 +10,7 @@
 <body>
     <h1 class="title">Link Page</h1>
     <div>
+        <% if (locals.message) { %> <p> <%= message %> </p> <% } %>
         <p>
             <a href="home_page">Home Page</a>
         </p>
