made a really shitty back button, cleaned up some stuff.

--- a/views/pages/building.ejs
+++ b/views/pages/building.ejs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <%- include("back") %>
     <table class="container-fluid">
         <tr class="row m-auto">
             <td class="col-12 cover main" id="building-crop-1">
