--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <%- include("back") %>
     <div class="container-fluid">
         <div class="row">
             <% categories.forEach(category => 
