--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <%- include("back") %>
     <table class="container-fluid">
         <div id="page_banner">
             <tr class="row">
