--- a/views/pages/back.ejs
+++ b/views/pages/back.ejs
@@ -1,13 +1,26 @@
-<button id="back" style="
-    left: 0;
-    top: 50%;
-    transform: translate(0, -50%);
-    background-color: black;
-    color: white;
+<button style="
+    /* remove all stylings from buttons */
+    background: none;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+
+	padding: 5px 5px 5px 1px;
+    border-radius: 0 0 5px 0;
+
     position: fixed;
-    padding: 1px;
+    left: 0;
+    top: 0;
+
+    font-size: 1.5em;
+    background-color: #003767;
+    color: white;
+    text-align: center;
+
     z-index: 1000;
 "
 onclick="history.back()">
-    &lt;
+    &#11207;
 </button>
+<!--&#129152;-->
