Update home page
Added a map reference section, changed the top 4 majors to reflect the 2019 data.

--- a/views/pages/home_page.ejs
+++ b/views/pages/home_page.ejs
@@ -29,10 +29,9 @@
         </div>
         <tr class="row" id="major_exploration">
             <td class="col-12">
-                <h1>
+                <h1 text-align="center">
                     Get to know your options
                 </h1>
-                <a src="/major_select"></a>
             </td>
         </tr>
         <tr class="row" id="popular_majors">
@@ -41,33 +40,41 @@
             </td>
         </tr>
         <tr class="row">
+            <!-- These still need the anchors for nav-->
+            <!--I know it's sad that Software isn't here but these are the 2019 stats-->
             <td class="col-3 p-1" id="card-img-1">
                 <div class="oit-card" id="card-img-1">
                     <div class="oit-card-text">
-                        <p id="major-1">Software Engineering</p>
+                        <p id="major-1">Diagnostic Medical Sonography & Ultrasound Technician</p>
                     </div>
                 </div>
             </td>
             <td class="col-3 p-1">
                 <div class="oit-card" id="card-img-2">
                     <div class="oit-card-text">
-                        <p id="major-2">Civil Engineering</p>
+                        <p id="major-2">Mechanical Engineering</p>
                     </div>
                 </div>
             </td>
             <td class="col-3 p-1">
                 <div class="oit-card" id="card-img-3">
                     <div class="oit-card-text">
-                        <p id="major-3">Echocardiology</p>
+                        <p id="major-3">Dental Hygiene</p>
                     </div>
                 </div>
             </td>
             <td class="col-3 p-1">
                 <div class="oit-card" id="card-img-4">
                     <div class="oit-card-text">
-                        <p id="major-4">Mechanical Engineering</p>
+                        <p id="major-4">Radiographer</p>
                     </div>
                 </div>
+            </td>
+        </tr>
+        <tr class="row" id="major_link">
+            <td class="col-12">
+                <!--TODO: fix ref to pull data from JSON/Database-->
+                <a href="/major_select">All Majors</a>
             </td>
         </tr>
         <tr class="row" id="professors_heading">
@@ -78,6 +85,16 @@
         <tr class="row" id="professor_directory">
             <td class="col-12">
                 <p>click <a href="/professors_page">here</a> to view directory</p>
+            </td>
+        </tr>
+        <tr class="row" id="map_heading">
+            <td class="col-12">
+                <h1>Never get lost</h1>
+            </td>
+        </tr>
+        <tr class="row" id="map_body">
+            <td class="col-12">
+                <h2>Learn about the campus <a href="/old_building_select">here</a></h2>
             </td>
         </tr>
     </table>
