Saves to json and accesses it without problem. The problem is getting all the data to be accessible like we had it so we can put up the web page like we had. -Works but single major pages don't right now.

--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -32,7 +32,7 @@
 
                 <% category["relatedDegrees"].forEach(degreeRef => 
                 { 
-                    let degree = degreeRef.path.split("\/")[1];
+                    let degree = degreeRef/*.path.split("\/")[1]*/;
                     %>
                     <div class="width-25 p-1 <%= categoryAsClass %> collapse">
                         <a href="/major?page=<%- degree %>">
