--- a/views/pages/back.ejs
+++ b/views/pages/back.ejs
@@ -14,7 +14,7 @@
     top: 0;
 
     font-size: 1.5em;
-    background-color: #003767;
+    background-color: #003767; /* oit blue. not sure if I can pull from the scss file. */
     color: white;
     text-align: center;
 
@@ -23,4 +23,4 @@
 onclick="history.back()">
     &#11207;
 </button>
-<!--&#129152;-->
+<!-- &#129152; may also be good -->
