--- a/views/pages/major_select.ejs
+++ b/views/pages/major_select.ejs
@@ -16,7 +16,9 @@
         <div class="row">
             <% categories.forEach(category => 
             { 
-                let categoryAsClass = category["categoryTitle"].replace(/[ &/]/g, "");
+                // This will need to be dynamically updated as there's no way to always have the
+                // majors that contain more than just these characters
+                let categoryAsClass = category["categoryTitle"].replace(bad_chars, "");
                 %>
                 <div class="width-25 collapser p-1" type="button" data-bs-toggle="collapse" data-bs-target=".<%= categoryAsClass %>"
                     aria-expanded="false" aria-controls=".<%= categoryAsClass %>">
